--- a/src/users/components/UsersList.css
+++ b/src/users/components/UsersList.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 0;
   width: 90%;
-  max-width: 50rem;
+  /* max-width: 50rem; */
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
