--- a/src/shared/components/FormElements/ImageUpload.css
+++ b/src/shared/components/FormElements/ImageUpload.css
@@ -3,10 +3,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: white;
   }
   
   .image-upload__preview {
-    width: 13rem;
+    width: 20rem;
     height: 13rem;
     border: 1px solid #ccc;
     display: flex;
@@ -14,10 +15,17 @@
     align-items: center;
     text-align: center;
     margin-bottom: 1rem;
+    border-radius: 10px;
   }
   
   .image-upload__preview img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .image-upload .image-text {
+    color: white;
+    font-size: large;
+    font-weight: 200;
   }
