--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -19,14 +19,17 @@
     color: #292929;
     text-decoration: none;
     padding: 0.5rem;
+    /* background: transparent; */
   }
   
   .nav-links a:hover,
   .nav-links a:active,
   .nav-links a.active {
-    background: #f8df00;
+    background: #ba24ff;
+    /* background: transparent; */
     border-color: #292929;
     color: #292929;
+    border-radius: 5px;
   }
   
   .nav-links button {
@@ -46,6 +49,7 @@
   .nav-links button:active {
     background: #292929;
     color: white;
+    border-radius: 4px;
   }
   
   @media (min-width: 768px) {
@@ -70,7 +74,7 @@
     
     .nav-links button:hover,
     .nav-links button:active {
-      background: #f8df00;
+      background: #ba24ff;
       color: #292929;
     }
   }
