--- a/src/users/components/UserItem.css
+++ b/src/users/components/UserItem.css
@@ -1,6 +1,6 @@
 .user-item {
   margin: 1rem;
-  width: calc(45% - 2rem);
+  /* width: calc(45% - 2rem); */
   min-width: 17.5rem;
 }
 
@@ -46,4 +46,9 @@
 
 .user-item__info h3 {
   margin: 0;
+}
+.user-item__placeCount{
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
 }
